fixed bug where the cards were too big. added result field in GameState to indicate action status.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="jfc_base.css">
   <link href='http://fonts.googleapis.com/css?family=Stalinist+One' rel='stylesheet' type='text/css'>
   <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+  <script src="GoMo_lib.js"></script>
   <script src="jfc_base.js"></script>
 </head>
 <body>
