added display of cards and player. finetuning incoming. have to brief co-developer and designer.

--- a/index.html
+++ b/index.html
@@ -24,25 +24,14 @@
     </table>
   </div>
   <div id="players">
-    <div class="player active">
-      <span class="player_name">Shylux</span>
+    <div class="player template">
+      <span class="me">☺</span><span class="player_name"></span>
     </div>
-    <div class="player">
-      <span class="player_name">JUstMove92</span>
-    </div>
-    <div class="player">
-      <span class="player_name">Orcaflosse</span>
+    <div class="player join">
+      <input id="join" type="text" placeholder="Username" /><input value="Join" type="submit" onclick="javascript:join()" />
     </div>
   </div>
-  <div id="cards">
-    <div class="card red"></div>
-    <div class="card green"></div>
-    <div class="card blue"></div>
-    <div class="card red"></div>
-    <div class="card green"></div>
-    <div class="card blue"></div>
-    <div class="card green"></div>
-  </div>
+  <div id="cards"></div>
   <footer>Created by Shylux</footer>
 </body>
 </html>
