added start game button and turn interaction. game is now playable.

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       <input id="join" type="text" placeholder="Username" /><input value="Join" type="submit" onclick="javascript:join()" />
     </div>
   </div>
+  <div id="start"><input type="submit" value="Start Game" onclick="javascript:GoMo.startGame()"/></div>
   <div id="cards"></div>
   <footer>Created by Shylux</footer>
 </body>
