added user password and game reset

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <title>GoMo</title>
   <meta charset=utf-8>
-  <link rel="stylesheet" href="jfc_base.css">
+  <link rel="stylesheet" href="gomo_base.css">
   <link href='http://fonts.googleapis.com/css?family=Stalinist+One' rel='stylesheet' type='text/css'>
   <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
   <script src="GoMo_lib.js"></script>
-  <script src="jfc_base.js"></script>
+  <script src="gomo_base.js"></script>
 </head>
 <body>
   <header><h1>GoMo</h1></header>
@@ -32,6 +32,7 @@
     </div>
   </div>
   <div id="start"><input type="submit" value="Start Game" onclick="javascript:GoMo.startGame()"/></div>
+  <div id="reset"><input type="submit" value="Reset Game" onclick="javascript:GoMo.resetGame()"/></div>
   <div id="cards"></div>
   <footer>Created by Shylux</footer>
 </body>
