added noscript message and error display.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
 </head>
 <body>
   <header><h1>GoMo</h1></header>
-  <div id="overlay"></div>
+  <noscript>
+    <div class="overlay">
+      <div id="nojs">Please enable JavaScript.</div>
+    </div>
+  </noscript>
+  <div id="error">Error</div>
   <div id="login">login</div>
   <div id="board">
     <table>
